<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_bonjour"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:backgroundTint="#6A2626"
        android:onClick="bonjourOnClick"
        android:text="@string/bonjour"
        app:layout_constraintBottom_toTopOf="@+id/button_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button_photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#8BC34A"
        android:text="@string/photo"
        android:textColor="#37474F"
        app:layout_constraintBottom_toTopOf="@+id/button_chrono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_bonjour" />

    <Button
        android:id="@+id/button_chrono"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="608dp"
        android:backgroundTint="#9A5757"
        android:text="@string/chronometre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_photo" />

    <Button
        android:id="@+id/button_long_activity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="541dp"
        android:backgroundTint="#BAAAAA"
        android:text="Activite Longue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_chrono"
        app:layout_constraintVertical_bias="0.545" />

    <Button
        android:id="@+id/button_meteo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="340dp"
        android:backgroundTint="#F61313"
        android:text="@string/météo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_long_activity"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_sensor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="370dp"
        android:backgroundTint="#80EF00"
        android:text="@string/sensor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_meteo" />

    <Button
        android:id="@+id/button_selectActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="299dp"
        android:text="@string/Select_Activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sensor" />

    <Button
        android:id="@+id/button_getPhoto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="224dp"
        android:backgroundTint="#FF5722"
        android:text="@string/dernière_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_selectActivity" />

    <Button
        android:id="@+id/button_contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="158dp"
        android:backgroundTint="#0ECFBD"
        android:text="@string/contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_getPhoto" />
</androidx.constraintlayout.widget.ConstraintLayout>